--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "ablute-api",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
