--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
-"scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start"
-},
-"dependencies": {
-  "next": "^14.0.0",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "openai": "^4.28.1"
+{
+  "name": "ablute-api",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "openai": "^4.28.1"
+  }
 }
